--- a/app/src/main/res/layout/activity_recipe_steps.xml
+++ b/app/src/main/res/layout/activity_recipe_steps.xml
@@ -4,50 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.login.recipeSteps">
+    tools:context=".ui.login.Recipe_Steps">
 
     <EditText
         android:id="@+id/textView5"
         android:layout_width="174dp"
         android:layout_height="75dp"
+        android:layout_marginBottom="47dp"
+
         android:text="TextView"
-        tools:layout_editor_absoluteX="98dp"
-        tools:layout_editor_absoluteY="78dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        tools:layout_editor_absoluteX="98dp" />
 
     <EditText
         android:id="@+id/textView6"
         android:layout_width="180dp"
         android:layout_height="63dp"
+        android:layout_marginBottom="50dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="95dp"
-        tools:layout_editor_absoluteY="200dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintBottom_toTopOf="@+id/textView7"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="95dp" />
 
     <EditText
         android:id="@+id/textView7"
         android:layout_width="195dp"
         android:layout_height="54dp"
+        android:layout_marginBottom="73dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="98dp"
-        tools:layout_editor_absoluteY="313dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintBottom_toTopOf="@+id/addSteps"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="98dp" />
 
     <Button
         android:id="@+id/addSteps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="29dp"
         android:text="Button"
-        tools:layout_editor_absoluteX="136dp"
-        tools:layout_editor_absoluteY="440dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintBottom_toTopOf="@+id/Display"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="136dp" />
 
     <Button
         android:id="@+id/Display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Display"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="517dp"
-        tools:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteY="517dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
