--- a/app/src/main/res/layout/edit_steps.xml
+++ b/app/src/main/res/layout/edit_steps.xml
@@ -25,7 +25,7 @@ tools:context=".ui.login.EditRecipe">
         android:layout_height="58dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
-        />
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/textView2"
@@ -35,14 +35,14 @@ tools:context=".ui.login.EditRecipe">
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
-       />
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/textView3"
 
         android:layout_width="126dp"
         android:layout_height="54dp"
-        
+
         android:text="TextView"
 
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
