--- a/app/src/main/res/layout/edit_steps.xml
+++ b/app/src/main/res/layout/edit_steps.xml
@@ -11,7 +11,7 @@ tools:context=".ui.login.EditRecipe">
         android:id="@+id/add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="180dp"
+        android:layout_marginBottom="50dp"
         android:text="add"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
 
@@ -23,15 +23,18 @@ tools:context=".ui.login.EditRecipe">
         android:id="@+id/textView"
         android:layout_width="133dp"
         android:layout_height="58dp"
+        android:layout_marginBottom="50dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="72dp" />
 
     <EditText
         android:id="@+id/textView2"
         android:layout_width="131dp"
         android:layout_height="59dp"
 
+        android:layout_marginBottom="50dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
@@ -43,11 +46,13 @@ tools:context=".ui.login.EditRecipe">
         android:layout_width="126dp"
         android:layout_height="54dp"
 
-        android:text="TextView"
 
+        android:layout_marginBottom="50dp"
+        android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
-        tools:layout_editor_absoluteX="67dp" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="5dp" />
 
     <Button
         android:id="@+id/addSteps"
@@ -64,11 +69,11 @@ tools:context=".ui.login.EditRecipe">
         android:layout_width="137dp"
         android:layout_height="48dp"
 
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="50dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintBottom_toTopOf="@+id/add"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="149dp" />
+        tools:layout_editor_absoluteX="26dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
