--- a/app/src/main/res/layout/activity_recipe_steps.xml
+++ b/app/src/main/res/layout/activity_recipe_steps.xml
@@ -10,17 +10,19 @@
         android:id="@+id/textView5"
         android:layout_width="174dp"
         android:layout_height="75dp"
-        android:layout_marginBottom="47dp"
 
+
+        android:layout_marginBottom="25dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
-        tools:layout_editor_absoluteX="98dp" />
+        tools:layout_editor_absoluteX="88dp" />
 
     <EditText
         android:id="@+id/textView6"
         android:layout_width="180dp"
         android:layout_height="63dp"
-        android:layout_marginBottom="50dp"
+
+        android:layout_marginBottom="25dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
         tools:ignore="MissingConstraints"
@@ -30,18 +32,19 @@
         android:id="@+id/textView7"
         android:layout_width="195dp"
         android:layout_height="54dp"
-        android:layout_marginBottom="73dp"
+
+        android:layout_marginBottom="25dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/addSteps"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="98dp" />
+        tools:layout_editor_absoluteX="88dp" />
 
     <Button
         android:id="@+id/addSteps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="29dp"
-        android:text="Button"
+        android:layout_marginBottom="25dp"
+        android:text="Add Recipe Steps"
         app:layout_constraintBottom_toTopOf="@+id/Display"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="136dp" />
@@ -50,8 +53,9 @@
         android:id="@+id/Display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
         android:text="Display"
+        app:layout_constraintTop_toBottomOf="@+id/addSteps"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="517dp" />
+        tools:layout_editor_absoluteX="136dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
