--- a/app/src/main/res/layout/activity_recipe_steps.xml
+++ b/app/src/main/res/layout/activity_recipe_steps.xml
@@ -9,53 +9,67 @@
     <EditText
         android:id="@+id/textView5"
         android:layout_width="174dp"
-        android:layout_height="75dp"
+        android:layout_height="54dp"
 
 
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="8dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
-        tools:layout_editor_absoluteX="88dp" />
+        app:layout_constraintEnd_toEndOf="@+id/textView6"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView6"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/textView6"
-        android:layout_width="180dp"
-        android:layout_height="63dp"
+        android:layout_width="191dp"
+        android:layout_height="56dp"
 
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="8dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="95dp" />
+        app:layout_constraintEnd_toEndOf="@+id/textView7"
+        app:layout_constraintStart_toStartOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/textView7"
         android:layout_width="195dp"
         android:layout_height="54dp"
 
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="110dp"
+        android:layout_marginBottom="8dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/addSteps"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="88dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/addSteps"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/addSteps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="4dp"
         android:text="Add Recipe Steps"
         app:layout_constraintBottom_toTopOf="@+id/Display"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="136dp" />
+        tools:layout_editor_absoluteX="88dp" />
 
     <Button
         android:id="@+id/Display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:text="Display"
+        android:layout_marginTop="48dp"
+        android:text="@android:string/ok"
+        app:layout_constraintStart_toStartOf="@+id/addSteps"
         app:layout_constraintTop_toBottomOf="@+id/addSteps"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="136dp" />
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
